argocd-error-page/error-pages-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: error-pages
  namespace: error-pages
spec:
  selector:
    app: error-pages
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
    protocol: TCP
  loadBalancerIP: 192.168.0.178
